--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 
-
-all= run_training
-
 run_training:
-	python3 -m training
+	python3 -m training --output-path=./output -e 1000 --mode train
+
+run_acquire:
+	python3 -m training --output-path=./dataset.json --video 6 --mode acquire
